--- a/css/main.css
+++ b/css/main.css
@@ -99,23 +99,32 @@ footer {
 
 /* Header styles */
 
+header {
+  padding: 15px 0;
+}
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-
+  margin: 0;
+}
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 header nav {
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 .header nav ul {
   display: flex;
   justify-content: space-around;
-
+  width: 100%;
 }
 
 /* ------- Mobile Styles - Homepage -------*/
@@ -142,13 +151,23 @@ aside {
   justify-content: center;
   flex-flow: row wrap;
 }
+
+.features h2 {
+  margin-bottom: 60px;
+}
+.features article {
+  width: 63%;
+  margin: 30px 0;
+}
 .features .features-items {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
-
+.features p {
+  margin: 0;
+}
 
 /* Reviews */
 
@@ -156,6 +175,15 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 /* ------- About Page ------- */
 .mission {
@@ -171,7 +199,9 @@ aside {
   align-items: center;
   flex-flow: row wrap;
 }
-
+.contact-content p {
+  margin: 0;
+}
 /* FAQ Page */
 
 .faq {
@@ -182,13 +212,35 @@ aside {
 }
 
 .faq .content-wrapper {
+  margin: 50px 0 0 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
 }
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
+}
 /* Footer */
 
+footer {
+  flex-direction: column;
+}
+footer p{
+  margin: 0;
+}
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+  margin-bottom: 50px;
+}
 footer .social-icons  {
   display: flex;
   justify-content: space-around;
@@ -198,6 +250,9 @@ footer .social-icons p {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+footer .copyright{
+  margin: 20px 0;
 }
 
 /* ==========================================================================
