--- a/css/main.css
+++ b/css/main.css
@@ -343,6 +343,7 @@ footer .copyright{
    Modify as content requires.
    ========================================================================== */
 
+   /* ------- TABLET STYLES ------- */
 @media only screen and (min-width: 768px) {
   /* Style adjustments for viewports that meet the condition */
 }
@@ -473,7 +474,61 @@ footer .copyright{
     .faq h2 {
       width: 100%;
     }
-  
+
+    /* ------- DESKTOP STYLES -------*/
+    @media only screen and (min-width:1200px) {
+    
+      .content-wrapper {
+        max-width: 960px;
+      }
+    
+      /* Hero */
+      .hero-area h1 {
+        width: 60%;
+    }
+    
+      /* Aside */
+      aside .content-wrapper {
+        justify-content: space-around;
+      }
+    
+      aside .content-wrapper .form-description,
+      aside .content-wrapper .form {
+        width: 30%;
+      }
+    
+      /* Features */
+    
+      .features h2 {
+        width: 90%;
+      }
+    
+      .features article {
+        flex-basis: 33%;
+      }
+      
+      /* Reviews */
+      .reviews article div {
+        width: 42%;
+      }
+    
+      /* ==========================================================================
+      About Page
+      ========================================================================== */
+    
+      .mission h2,
+      .contact-section .content-wrapper h2 {
+          width: 95%;
+      }
+    
+      /* ==========================================================================
+      FAQ Page
+      ========================================================================== */
+      .faq h2 {
+        width: 100%;
+      }
+    
+    }
 
 @media print,
   (-webkit-min-device-pixel-ratio: 1.25),
