--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ body {
   font-size: 1em;
   font-family: 'Open Sans', sans-serif;
   text-align: left;
+  color: #e2e3ed;
 }
  
 ul, 
@@ -111,6 +112,7 @@ a {
 h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
+  font-weight: 500;
 }
  
 h3, 
@@ -141,6 +143,7 @@ footer {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #202322;
 }
 
 /* Header styles */
@@ -156,6 +159,7 @@ header .content-wrapper {
   margin: 0;
 }
 .header-divider {
+  background: #3a3a3a; 
   width: 100%;
   height: 1px;
   margin: 10px 0 20px 0;
@@ -166,6 +170,9 @@ header nav {
   align-items: center;
   flex-flow: row wrap;
   width: 60%;
+  font-size: 1.125em;
+  font-weight: 700;
+  text-transform: uppercase;
 }
 .header nav ul {
   display: flex;
@@ -180,7 +187,12 @@ header nav {
   justify-content: center;
   flex-flow: row wrap;
 }
-
+.hero-area h1 {
+  font-size: 2.25em;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500; 
+  line-height: 1.2; 
+}
 /* Aside */
 
 aside {
@@ -188,8 +200,33 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
+}
+aside .form{
+  margin-top: 30px;
 }
 
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+  padding: 1em;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
 
 /* Features */
 .features {
@@ -212,6 +249,7 @@ aside {
   flex-flow: row wrap;
 }
 .features p {
+  text-align: center;
   margin: 0;
 }
 
@@ -219,12 +257,14 @@ aside {
 
 .reviews {
   display: flex;
+  background-color: #2a423a;
   justify-content: center;
   flex-flow: row wrap;
 }
 
 .reviews h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .reviews h3 {
@@ -237,6 +277,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .contact-section {
@@ -244,6 +285,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #2a423a;
 }
 .contact-content p {
   margin: 0;
@@ -255,6 +297,7 @@ aside {
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  background-color: #527158;
 }
 
 .faq .content-wrapper {
@@ -266,15 +309,20 @@ aside {
 }
 .faq h2 {
   margin-bottom: 40px;
+  line-height: 1;
 }
 
 .faq-content {
   margin-bottom: 50px;
 }
+.faq-content h4 {
+  line-height: 1.333;
+}
 /* Footer */
 
 footer {
   flex-direction: column;
+  text-align: center;
 }
 footer p{
   margin: 0;
