Added images and logo header

--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,13 @@ p {
   font-size: .875em;
   line-height: 1.285;
 }
+img {
+  width: 100%;
+ }
   
+ figure {
+  margin: 0;
+ }
 address {
  font-style: normal;
 }
@@ -158,6 +164,13 @@ header .content-wrapper {
   flex-flow: row wrap;
   margin: 0;
 }
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
+}
 .header-divider {
   background: #3a3a3a; 
   width: 100%;
@@ -179,10 +192,17 @@ header nav {
   justify-content: space-around;
   width: 100%;
 }
+header nav ul li {
+  font-size: 1.125em;
+}
 
 /* ------- Mobile Styles - Homepage -------*/
 
 .hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -230,6 +250,9 @@ input[type=button] {
 
 /* Features */
 .features {
+  background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -446,6 +469,15 @@ footer .copyright{
       max-width: 640px;
       margin: 100px 0;
     }
+    h2 {
+      font-size: 2.25em;
+      line-height: 1.333;
+    }
+  
+    h3 {
+        font-size: 1.5em;
+        line-height: 1.25;
+    }
   
     /* Header */
     header {
@@ -457,7 +489,9 @@ footer .copyright{
       width: 100%;
       justify-content: space-between;
     }
-  
+    header figure {
+      width: 30%;
+    }
     header nav {
       width: 20%;
     }
@@ -470,7 +504,15 @@ footer .copyright{
       display: none;
     }
     /* Hero Area */
+    .hero-area {
+      min-height: 600px;
+    }
   
+    .hero-area h1 {
+      font-size: 3em;
+      line-height: 1;
+      margin: 0;
+  }
     /* Aside */
     aside .content-wrapper {
       margin: 50px 0;
@@ -486,6 +528,9 @@ footer .copyright{
     }
   
     /* Features */
+    .features h2 {
+      margin-bottom: 20px;
+    }
     .features article {
       display: flex;
       justify-content: center;
@@ -495,7 +540,7 @@ footer .copyright{
     }
     
     .features .features-item-description {
-      width: 50%;
+      width: 62%;
     }
   
     /* Reviews */
@@ -503,27 +548,41 @@ footer .copyright{
       display: flex;
       justify-content: space-between;
     }
-  
-    .reviews article div {
+    .reviews h2 {
+      width: 85%;
+    }
+    .reviews article div,
+    .reviews article figure {
       width: 49%;
     }
-  
+    .reviews h3 {
+      width: 75%;
+      margin: 0;
+    }
     /* Footer */
     footer .content-wrapper {
       width: 65%;
       margin: 100px 0;
     }
   
-    .footer-content {
+    footer .footer-content {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-direction: row;
     }
   
     footer .contact {
       margin-bottom: 0;
     }
+    footer h4 {
+      font-size: 1.5em;
+      margin-bottom: 40px;
+    }
   
+    footer p {
+        line-height: 1.285;
+    }
     footer .copyright {
       width: 100%;
     }
@@ -552,7 +611,9 @@ footer .copyright{
       justify-content: space-between;
       align-items: flex-start;
     }
-  
+    .contact-content h4 {
+      font-size: 1.5em;
+    }
     /* ==========================================================================
      FAQ Page
      ========================================================================== */
@@ -568,17 +629,38 @@ footer .copyright{
     .faq h2 {
       width: 100%;
     }
+    .faq h4,
+    .faq p {
+        font-size: .875em;
+        line-height: 1.125;
+    }
+  
 
     /* ------- DESKTOP STYLES -------*/
     @media only screen and (min-width:1200px) {
-    
+      header {
+        padding: 15px 0;
+      }
       .content-wrapper {
         max-width: 960px;
       }
+      h2 {
+        font-size: 2.25em;
+      }
     
+      h3,
+      h4 {
+          font-size: 1.875em;
+      }
+    
+      p {
+          font-size: 1.125em;
+          line-height: 1.333;
+      }
       /* Hero */
       .hero-area h1 {
-        width: 60%;
+        font-size: 3.75em;
+        width: 80%;
     }
     
       /* Aside */
@@ -590,7 +672,9 @@ footer .copyright{
       aside .content-wrapper .form {
         width: 30%;
       }
-    
+      .form-description p {
+        font-size: 1.125em;
+      }
       /* Features */
     
       .features h2 {
@@ -605,7 +689,13 @@ footer .copyright{
       .reviews article div {
         width: 42%;
       }
+      .reviews h2 {
+        padding-bottom: 50px;
+      }
     
+      footer h4 {
+        font-size: 1.875em;
+      }
       /* ==========================================================================
       About Page
       ========================================================================== */
@@ -613,15 +703,24 @@ footer .copyright{
       .mission h2,
       .contact-section .content-wrapper h2 {
           width: 95%;
+          font-size: 3em;
       }
-    
+      .contact-content h4 {
+        font-size: 1.875em;
+      }
       /* ==========================================================================
       FAQ Page
       ========================================================================== */
       .faq h2 {
         width: 100%;
+        font-size: 3em;
       }
-    
+      
+      .faq h4,
+      .faq p {
+          font-size: 1.125em;
+          line-height: 1;
+      }
     }
 
 @media print,
