--- a/css/main.css
+++ b/css/main.css
@@ -302,7 +302,21 @@ input[type=button] {
   flex-flow: row wrap;
   background-color: #527158;
 }
+.map figure {
+  width: 100%;
+  height: 0; 
+  padding-bottom: 125%; 
+  overflow: hidden;
+  position: relative;
+}
 
+.map iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+}
 .contact-section {
   display: flex;
   justify-content: center;
@@ -614,6 +628,7 @@ footer .copyright{
     .contact-content h4 {
       font-size: 1.5em;
     }
+
     /* ==========================================================================
      FAQ Page
      ========================================================================== */
