Made map responsive

--- a/css/main.css
+++ b/css/main.css
@@ -615,7 +615,9 @@ footer .copyright{
     .mission-content p {
       width: 45%;
     }
-  
+    .map figure {
+      padding-bottom: 45.5%;
+    }
     .contact-section .content-wrapper h2 {
       width: 80%;
     }
@@ -714,7 +716,9 @@ footer .copyright{
       /* ==========================================================================
       About Page
       ========================================================================== */
-    
+      .map figure {
+        padding-bottom: 37.5%;
+      }
       .mission h2,
       .contact-section .content-wrapper h2 {
           width: 95%;
