--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,8 @@ body {
 ul, 
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
  
 a {
@@ -113,6 +115,7 @@ h2 {
   font-family: 'Poppins', sans-serif;
   font-size: 1.875em;
   font-weight: 500;
+  margin: 0;
 }
  
 h3, 
@@ -120,6 +123,7 @@ h4 {
   font-family: 'Poppins', sans-serif;
   margin: 20px 0;
   font-size: 1.125em;
+  font-weight: 500;
 }
  
 p {
@@ -158,11 +162,11 @@ header {
   padding: 15px 0;
 }
 header .content-wrapper {
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
-  margin: 0;
 }
 header figure {
   width: 60%;
@@ -173,24 +177,24 @@ header figure {
 }
 .header-divider {
   background: #3a3a3a; 
-  width: 100%;
   height: 1px;
+  width: 100%;
   margin: 10px 0 20px 0;
 }
 header nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-flow: row wrap;
   width: 60%;
   font-size: 1.125em;
   font-weight: 700;
   text-transform: uppercase;
-}
-.header nav ul {
   display: flex;
   justify-content: space-around;
+  align-items: center;
+  flex-flow: row wrap;
+}
+.header nav ul {
   width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
 header nav ul li {
   font-size: 1.125em;
@@ -607,6 +611,10 @@ footer .copyright{
   
     footer p {
         line-height: 1.285;
+    }
+    footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
     }
     footer .copyright {
       width: 100%;
